[gd_scene load_steps=4 format=3 uid="uid://gnhwfjmlhq1b"]

[ext_resource type="Texture2D" uid="uid://cydp7poqt7501" path="res://main_menu/Imp_Hand.png" id="1_h5aa7"]
[ext_resource type="Script" path="res://main_menu/fail_screen.gd" id="1_qis0b"]

[sub_resource type="LabelSettings" id="LabelSettings_gjlld"]
font_size = 128
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[node name="FailScreen" type="Node2D"]
script = ExtResource("1_qis0b")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1915.0
offset_bottom = 1088.0
color = Color(0.858824, 0.639216, 0.964706, 1)

[node name="FailMessage" type="Label" parent="."]
offset_left = 304.0
offset_top = 196.0
offset_right = 1650.0
offset_bottom = 549.0
text = "You have been kicked
out of the Convention"
label_settings = SubResource("LabelSettings_gjlld")
horizontal_alignment = 1

[node name="ImpHand" type="Sprite2D" parent="."]
position = Vector2(575, 875)
texture = ExtResource("1_h5aa7")

[node name="PlayAgainButton" type="Button" parent="."]
offset_left = 897.0
offset_top = 650.0
offset_right = 1501.0
offset_bottom = 741.0
theme_override_font_sizes/font_size = 60
text = "Sniff One More Time"

[node name="ExitButton" type="Button" parent="."]
offset_left = 858.0
offset_top = 832.0
offset_right = 1568.0
offset_bottom = 923.0
theme_override_font_sizes/font_size = 60
text = "I'll never sniff again...."

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
